methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:4: error: missing argument list for method isFacingTrail in class SlugSnail
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `isFacingTrail _` or `isFacingTrail(_)` instead of `isFacingTrail`.
    if (isFacingTrail==true){
        ^SlugSnail:19: error: type mismatch;
 found   : Boolean
 required: java.awt.Color
      if (getCouleurSol()==c:Color){
                         ^SlugSnail:19: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
      if (getCouleurSol()==c:Color){
                            ^