methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
     while(estSurBiscuit==false){
    if (isFacingTrail==true){
      baisseBrosse()
      avance()
      leveBrosse()
    } else {droite()}
  }
  prendBiscuit()
 }

def isFacingTrail(c:Color):Boolean = {
  	if (estFaceMur()== true){
      return false
    }  
  	else {
      avance()
  		if (getCouleurSol()==c:Color){
        	recule()
          return true
    	} else {
        recule()
      	return false
    } 
    }
}